# ohmo

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  p.py
apps/ohmo-driver/: Cargo.toml
apps/ohmo-driver/src/: app.rs  main.rs
apps/ohmo-driver/src/account/: documents.rs  mod.rs  payout.rs  profile.rs
apps/ohmo-driver/src/active_trip/: controls.rs  mod.rs  navigation.rs  rider_info.rs
apps/ohmo-driver/src/components/: battery_bar.rs  earnings_ring.rs  mod.rs  trip_card.rs
apps/ohmo-driver/src/earnings/: campaigns.rs  mod.rs  today.rs  weekly.rs
apps/ohmo-ops/: Cargo.toml
apps/ohmo-ops/src/: app.rs  main.rs
apps/ohmo-ops/src/audit/: export.rs  filters.rs  log.rs  mod.rs
apps/ohmo-ops/src/components/: alert_badge.rs  mod.rs  sparkline.rs  vehicle_pin.rs
apps/ohmo-ops/src/controller/: cas_sparkline.rs  hub_status.rs  live_grid.rs  mod.rs  ping_health.rs  soc_watchlist.rs
apps/ohmo-ops/src/executive/: mod.rs  pulse.rs  revenue.rs  status_ring.rs
apps/ohmo-ops/src/maintenance/: cycle_counter.rs  mod.rs  service_triggers.rs  soh_leaderboard.rs
apps/ohmo-ops/src/state/: alerts.rs  fleet.rs  mod.rs
apps/ohmo-rider/: Cargo.toml
apps/ohmo-rider/src/: app.rs  main.rs
crates/ohmo-analytics/: Cargo.toml
crates/ohmo-analytics/src/: lib.rs
crates/ohmo-auth/: Cargo.toml
crates/ohmo-auth/src/: lib.rs
crates/ohmo-charging/: Cargo.toml
crates/ohmo-charging/src/: lib.rs
crates/ohmo-core/: Cargo.toml
crates/ohmo-core/src/: lib.rs
crates/ohmo-dispatch/: Cargo.toml
crates/ohmo-dispatch/src/: lib.rs
crates/ohmo-fleet/: Cargo.toml
crates/ohmo-fleet/src/: lib.rs
crates/ohmo-gatekeeper/: Cargo.toml
crates/ohmo-gatekeeper/src/: lib.rs
crates/ohmo-identity/: Cargo.toml
crates/ohmo-identity/src/: lib.rs
crates/ohmo-identity/src/enatis/: client.rs  mod.rs  verify.rs
crates/ohmo-identity/src/models/: identity.rs  mod.rs  verification.rs
crates/ohmo-identity/src/pre_trip/: driver.rs  mod.rs  rider.rs
crates/ohmo-identity/src/verification/: background.rs  document.rs  face.rs  licence.rs  mod.rs
crates/ohmo-messaging/: Cargo.toml
crates/ohmo-messaging/src/: lib.rs
crates/ohmo-notifications/: Cargo.toml
crates/ohmo-notifications/src/: lib.rs
crates/ohmo-payments/: Cargo.toml
crates/ohmo-payments/src/: lib.rs
crates/ohmo-places/: Cargo.toml
crates/ohmo-places/src/: lib.rs
crates/ohmo-social/: Cargo.toml
crates/ohmo-social/src/: lib.rs
crates/ohmo-support/: Cargo.toml
crates/ohmo-support/src/: lib.rs
crates/ohmo-telemetry/: Cargo.toml
crates/ohmo-telemetry/src/: lib.rs
crates/ohmo-trips/: Cargo.toml
crates/ohmo-trips/src/: lib.rs
docs/: architecture.md  concurrency-model.md  dispatch-algorithm.md  driver-verification.md  fleet-ops-dashboard.md  gatekeeper.md  recording-compliance.md  telematics-pipeline.md
docs/api/: driver-api.md  ops-api.md  rider-api.md
infra/: Dockerfile.dispatch  Dockerfile.gateway  Dockerfile.telemetry  docker-compose.yml
migrations/: 001_init.sql  002_users.sql  003_drivers.sql  004_riders.sql  005_vehicles.sql  006_fleet.sql  007_trips.sql  008_payments.sql  009_places.sql  010_ads.sql  011_charging.sql  012_maintenance.sql  013_support.sql  014_messaging.sql  015_notifications.sql  016_social.sql  017_audit_log.sql  018_driver_test.sql  019_recordings.sql
proto/auth/: auth.proto
proto/charging/: charging.proto
proto/dispatch/: dispatch.proto
proto/fleet/: fleet.proto
proto/messaging/: messaging.proto
proto/notifications/: notifications.proto
proto/payments/: payments.proto
proto/places/: places.proto
proto/social/: social.proto
proto/support/: support.proto
proto/telemetry/: telemetry.proto
proto/trips/: trips.proto
scripts/: lint.sh  migrate.sh  seed.sh  setup.sh
services/ohmo-dispatch-svc/: Cargo.toml
services/ohmo-dispatch-svc/src/: main.rs  worker.rs
services/ohmo-gateway/: Cargo.toml
services/ohmo-gateway/src/: main.rs  router.rs  server.rs
services/ohmo-gateway/src/middleware/: auth.rs  cors.rs  gatekeeper.rs  logging.rs  mod.rs  tracing.rs
services/ohmo-gateway/src/routes/: mod.rs
services/ohmo-gateway/src/routes/v1/: auth.rs  charging.rs  drivers.rs  fleet.rs  mod.rs  notifications.rs  payments.rs  places.rs  riders.rs  support.rs  trips.rs
services/ohmo-gateway/src/routes/ws/: driver.rs  mod.rs  ops.rs  rider.rs
services/ohmo-telemetry-svc/: Cargo.toml
services/ohmo-telemetry-svc/src/: health.rs  main.rs  subscriber.rs
(+323 files in other folders)
