[workspace]
resolver = "2"
members = [
    "crates/ohmo-core",
    "crates/ohmo-auth",
    "crates/ohmo-identity",
    "crates/ohmo-gatekeeper",
    "crates/ohmo-dispatch",
    "crates/ohmo-telemetry",
    "crates/ohmo-fleet",
    "crates/ohmo-charging",
    "crates/ohmo-trips",
    "crates/ohmo-payments",
    "crates/ohmo-places",
    "crates/ohmo-social",
    "crates/ohmo-messaging",
    "crates/ohmo-notifications",
    "crates/ohmo-support",
    "crates/ohmo-analytics",
    "services/ohmo-gateway",
    "services/ohmo-dispatch-svc",
    "services/ohmo-telemetry-svc",
    "apps/ohmo-rider",
    "apps/ohmo-driver",
    "apps/ohmo-ops"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tonic = "0.11"
prost = "0.12"
axum = { version = "0.7", features = ["ws"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
