[package]
name = "ohmo-ops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ohmo-ops"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "1"
# blinc = { path = "../../blinc" }   # Uncomment when Blinc is linked
