[package]
name = "ohmo-dispatch-svc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ohmo-dispatch-svc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "1"
tracing-subscriber = "1"
tonic = "0.11"
prost = "0.12"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
ohmo-core = { path = "../../crates/ohmo-core" }
ohmo-dispatch = { path = "../../crates/ohmo-dispatch" }
ohmo-telemetry = { path = "../../crates/ohmo-telemetry" }
